# DeepDebater

./: .gitignore  LICENSE  README.md  README_ORIGINAL.md  debate_case_creation_to_distribute.ipynb  pyproject.toml
deep_debater/: __init__.py  __main__.py  agents.py  app.py  config.py  db.py  debate.py  export.py  models.py  tts.py
deep_debater/prompts/: __init__.py  affirmative.py  negative.py  speeches.py
deep_debater/workflows/: __init__.py  constructives.py  cross_ex.py  evidence.py  negative.py  rebuttals.py
