[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-debater"
version = "0.1.0"
description = "AI Policy Debate Simulator - A Python TUI library for policy debate"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "ag2[openai]>=0.6,<1.0",
    "duckdb>=0.9",
    "ducksearch>=1.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "textual>=0.40",
    "rich>=13.0",
    "python-docx>=1.0",
]

[project.optional-dependencies]
tts = [
    "pydub>=0.25",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
deep-debater = "deep_debater.__main__:main"

[tool.setuptools.packages.find]
include = ["deep_debater*"]
